--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">EF_Ecommerce</string>
+    <string name="home"> Home</string>
+    <string name="menu"> Menú</string>
+    <string name="favorite"> Favorite</string>
+    <string name="logout"> Logout</string>
+    <string name="text_password"> Password</string>
+    <string name="text_email"> Email</string>
+    <string name="name_login"> Login</string>
+    <string name="name_welcome"> Welcome</string>
+    <string name="name_info"> Please log in with your information.</string>
 </resources>
